--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
 									<span class="icon-star"></span>
 								</div>
 								<div class="time">
-									<svg width="16" height="16" aria-hidden="true" role="img" focusable="false"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M12 1c6.075 0 11 4.925 11 11s-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1zm0 2a9 9 0 100 18 9 9 0 000-18zm0 3a1 1 0 01.993.883L13 7v4.5l3.6 2.7a1 1 0 01-1.095 1.669L15.4 15.8l-4-3-.012-.009a1.005 1.005 0 01-.366-.583l-.006-.03a.881.881 0 01-.01-.061l-.001-.021a1.005 1.005 0 01-.004-.06L11 12V7a1 1 0 011-1z"></path>
+									<svg width="16" height="16" aria-hidden="true" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M12 1c6.075 0 11 4.925 11 11s-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1zm0 2a9 9 0 100 18 9 9 0 000-18zm0 3a1 1 0 01.993.883L13 7v4.5l3.6 2.7a1 1 0 01-1.095 1.669L15.4 15.8l-4-3-.012-.009a1.005 1.005 0 01-.366-.583l-.006-.03a.881.881 0 01-.01-.061l-.001-.021a1.005 1.005 0 01-.004-.06L11 12V7a1 1 0 011-1z"></path>
 									</svg>
 									<span>45 mins</span>
 								</div>
@@ -832,8 +832,12 @@
 		</div>
 	</section>
 	<footer class="main-footer">
+		<a class="backtotop-circle" href="#top" id="backToTop">			
+			<svg width="24" height="24" aria-hidden="true" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M11.293 7.293a1 1 0 011.32-.083l.094.083 8 8a1 1 0 01-1.32 1.497l-.094-.083L12 9.415l-7.293 7.292a1 1 0 01-1.32.083l-.094-.083a1 1 0 01-.083-1.32l.083-.094 8-8z"></path>
+			</svg>
+		</a>
 		<div class="custom-container">
-			<div class="wrapper d-flex justify-content-between">
+			<div class="wrapper d-flex justify-content-between flex-wrap">
 				<div class="footer-logo">
 					<a href="javascript:;">
 						<img src="images/footer-logo.png" alt="footer-logo" />
